<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flummoxed</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Flummoxed</string>

    <!-- Button Strings -->
    <string name="button_EasyMode">Easy Mode</string>
    <string name="button_HardMode">Hard Mode</string>
    <string name="button_SettingsActivity">Settings</string>
    <string name="button_TutorialActivity">Tutorial</string>
    <string name="button_PlayAgain">Continue</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_enterGuess">Enter Guess</string>
    <string name="button_backspace">Back Space</string>
    <string name="button_quit">Quit</string>
    <string name="FlummoxedLogo">Flummoxed Logo</string>
    <string name="title_activity_victory">Winner!</string>
    <string name="blank_string"></string>
    <string name="dismiss">Dismiss</string>
    <string name="invalid_guess">Invalid Guess</string>

    <!-- Label Strings -->
    <string name="label_guess">Guess</string>
    <string name="image_victory">Victory Image</string>
    <string name="victory_label">You Win</string>
    <string name="title_activity_try_again">Try Again</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="title_activity_feedback_rules">Tutorial</string>
    <string name="initial_guess">Initial Guess</string>
    <string name="button_Next">Next</string>

    <!-- Tutorial Strings -->
    <string name="textbox_tutorialGoal">The aim of the game is to guess a 5 digit number in 10 guesses or less! \n \n
        In order to help you, you get feedback based on each guess. Using the feedback you can logically work out
        the answer.</string>
    <string name="textbox_tutorialRules">In order to make it a little easier, there are a few rules. \n\n
	    The answer will be between 10,000 and 99,999.\n However, there are no repeating digits. \n \n
	    For example, 77777 is not a legitimate guess, as \'7\' is repeated. The same is true for numbers like: 12325, 50985,
	    57567, etc.</string>
    <string name="textbox_tutorialFeedback">Feedback comes in the form of coloured \'balls\'. \n
        A green ball indicates you have a correct digit in the correct position. \n
        An orange ball indicates you have a correct digit, but in the incorrect position. \n
        A red ball indicates you have the wrong digit.</string>
    <string name="initial_guess_description">From this guess, we can see that the numbers 3 and 2 are not in
        the answer. (red balls) \n
        We can also see that the numbers 7 and 5 are in the answer (orange balls) \n
        Finally, we can see the last digit in the answer is the number 9 (green ball)</string>
    <string name="title_activity_hard_mode_tutorial">Hard Mode Tutorial</string>
    <string name="textbox_hard_mode_tutorial">In Hard Mode, you do not get any red balls. You must logically 
        work out which numbers correspond to which balls you received. \n \n
        This is a much greater challenge, and is the true form of Flummoxed! \n
        Whilst challenging, if you use your guesses wisely, it is possible to always win.</string>
    <string name="hard_guess_description">#1 gives us two green balls. As we have no other 
        info, for #2 we keep 3 and 5 in place hoping they are green. \n However, we lose a green ball, so we are
        incorrect, and removed a correct digit. \n
        From #3, we can now say both 3 and 7 are \'red\' and can be dismissed. \n \n
        Try it and good luck!</string>

</resources>
