<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#557ECE"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.buckley.flummoxed.HardModeTutorialActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFC558"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/hard_mode_tutorial"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:enabled="false"
            android:gravity="center"
            android:inputType="none"
            android:text="@string/textbox_hard_mode_tutorial"
            android:textColor="#FFFFFF"
            android:textSize="13sp" >
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5"
            android:background="#FFC558"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/initial_guess"
                android:src="@drawable/hard_guess" />

            <TextView
                android:id="@+id/tutorial_hardGuessTextbox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="false"
                android:gravity="center"
                android:inputType="none"
                android:text="@string/hard_guess_description"
                android:textColor="#FFFFFF"
                android:textSize="13sp" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC558"
            android:orientation="horizontal" >

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:onClick="next"
                android:text="@string/button_Next" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>