<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="55dp"
    android:background="#557ECE"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.buckley.flummoxed.TitleActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:layout_height="0dp"
        android:contentDescription="@string/FlummoxedLogo"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_launcher" />
    
    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/button_MainActivity"
        android:onClick="playGame"
        android:background="#FFC558"
        android:textColor="#FFFFFF"
        android:textSize="32sp" 
        android:typeface="serif" />

    <Button
        android:id="@+id/buttonTutorial"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/button_TutorialActivity"
        android:onClick="playTutorial"
        android:background="#FFC558"
        android:textColor="#FFFFFF"
        android:textSize="32sp" 
        android:typeface="serif" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="#FFC558"
        android:textColor="#FFFFFF"
        android:textSize="32sp" 
        android:text="@string/button_SettingsActivity"
        android:typeface="serif" />

</LinearLayout>